Update to minimalist doodle styling and fix teacher dashboard dark mode bugs

--- a/v2/client/assets/css/student_dashboard.css
+++ b/v2/client/assets/css/student_dashboard.css
@@ -75,7 +75,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: url('../images/colorful_hero_doodle.png') center/cover no-repeat;
+  background: url('../images/minimalist_hero_doodle.png') center/cover no-repeat;
   opacity: 0.1;
   z-index: 0;
   pointer-events: none;
